[package]
name = "hello-world"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
wee_alloc = "0.4.5"
soroban-token-sdk = { workspace = true }
stellarlend-amm = { path = "../amm" }
stellar-contract-utils = { version = "0.6.0" }
stellar-macros = { version = "0.6.0" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
